// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumbs separatorStyle: 'BackSlash' 1`] = `
<DocumentFragment>
  <nav
    aria-label="Breadcrumb Trail"
  >
    <ol
      class="Breadcrumbs-list"
    >
      <li
        id="0"
      >
        <ui5-link
          data-id="0"
          design="Default"
          tabindex="0"
          ui5-link=""
        >
          Link 1
        </ui5-link>
        <ui5-label
          aria-hidden="true"
          class="Breadcrumbs-separatorInline"
          ui5-label=""
        >
          \\
        </ui5-label>
      </li>
      <li
        id="1"
      >
        <ui5-link
          data-id="1"
          design="Default"
          tabindex="-1"
          ui5-link=""
        >
          Link 2
        </ui5-link>
        <ui5-label
          aria-hidden="true"
          class="Breadcrumbs-separatorInline"
          ui5-label=""
        >
          \\
        </ui5-label>
      </li>
      <li
        id="2"
      >
        <ui5-link
          data-id="2"
          design="Default"
          tabindex="-1"
          ui5-link=""
        >
          Link 3
        </ui5-link>
      </li>
    </ol>
  </nav>
</DocumentFragment>
`;

exports[`Breadcrumbs separatorStyle: 'DoubleBackSlash' 1`] = `
<DocumentFragment>
  <nav
    aria-label="Breadcrumb Trail"
  >
    <ol
      class="Breadcrumbs-list"
    >
      <li
        id="0"
      >
        <ui5-link
          data-id="0"
          design="Default"
          tabindex="0"
          ui5-link=""
        >
          Link 1
        </ui5-link>
        <ui5-label
          aria-hidden="true"
          class="Breadcrumbs-separatorInline"
          ui5-label=""
        >
          \\\\
        </ui5-label>
      </li>
      <li
        id="1"
      >
        <ui5-link
          data-id="1"
          design="Default"
          tabindex="-1"
          ui5-link=""
        >
          Link 2
        </ui5-link>
        <ui5-label
          aria-hidden="true"
          class="Breadcrumbs-separatorInline"
          ui5-label=""
        >
          \\\\
        </ui5-label>
      </li>
      <li
        id="2"
      >
        <ui5-link
          data-id="2"
          design="Default"
          tabindex="-1"
          ui5-link=""
        >
          Link 3
        </ui5-link>
      </li>
    </ol>
  </nav>
</DocumentFragment>
`;

exports[`Breadcrumbs separatorStyle: 'DoubleGreaterThan' 1`] = `
<DocumentFragment>
  <nav
    aria-label="Breadcrumb Trail"
  >
    <ol
      class="Breadcrumbs-list"
    >
      <li
        id="0"
      >
        <ui5-link
          data-id="0"
          design="Default"
          tabindex="0"
          ui5-link=""
        >
          Link 1
        </ui5-link>
        <ui5-label
          aria-hidden="true"
          class="Breadcrumbs-separatorInline"
          ui5-label=""
        >
          &gt;&gt;
        </ui5-label>
      </li>
      <li
        id="1"
      >
        <ui5-link
          data-id="1"
          design="Default"
          tabindex="-1"
          ui5-link=""
        >
          Link 2
        </ui5-link>
        <ui5-label
          aria-hidden="true"
          class="Breadcrumbs-separatorInline"
          ui5-label=""
        >
          &gt;&gt;
        </ui5-label>
      </li>
      <li
        id="2"
      >
        <ui5-link
          data-id="2"
          design="Default"
          tabindex="-1"
          ui5-link=""
        >
          Link 3
        </ui5-link>
      </li>
    </ol>
  </nav>
</DocumentFragment>
`;

exports[`Breadcrumbs separatorStyle: 'DoubleSlash' 1`] = `
<DocumentFragment>
  <nav
    aria-label="Breadcrumb Trail"
  >
    <ol
      class="Breadcrumbs-list"
    >
      <li
        id="0"
      >
        <ui5-link
          data-id="0"
          design="Default"
          tabindex="0"
          ui5-link=""
        >
          Link 1
        </ui5-link>
        <ui5-label
          aria-hidden="true"
          class="Breadcrumbs-separatorInline"
          ui5-label=""
        >
          //
        </ui5-label>
      </li>
      <li
        id="1"
      >
        <ui5-link
          data-id="1"
          design="Default"
          tabindex="-1"
          ui5-link=""
        >
          Link 2
        </ui5-link>
        <ui5-label
          aria-hidden="true"
          class="Breadcrumbs-separatorInline"
          ui5-label=""
        >
          //
        </ui5-label>
      </li>
      <li
        id="2"
      >
        <ui5-link
          data-id="2"
          design="Default"
          tabindex="-1"
          ui5-link=""
        >
          Link 3
        </ui5-link>
      </li>
    </ol>
  </nav>
</DocumentFragment>
`;

exports[`Breadcrumbs separatorStyle: 'GreaterThan' 1`] = `
<DocumentFragment>
  <nav
    aria-label="Breadcrumb Trail"
  >
    <ol
      class="Breadcrumbs-list"
    >
      <li
        id="0"
      >
        <ui5-link
          data-id="0"
          design="Default"
          tabindex="0"
          ui5-link=""
        >
          Link 1
        </ui5-link>
        <ui5-label
          aria-hidden="true"
          class="Breadcrumbs-separatorInline"
          ui5-label=""
        >
          &gt;
        </ui5-label>
      </li>
      <li
        id="1"
      >
        <ui5-link
          data-id="1"
          design="Default"
          tabindex="-1"
          ui5-link=""
        >
          Link 2
        </ui5-link>
        <ui5-label
          aria-hidden="true"
          class="Breadcrumbs-separatorInline"
          ui5-label=""
        >
          &gt;
        </ui5-label>
      </li>
      <li
        id="2"
      >
        <ui5-link
          data-id="2"
          design="Default"
          tabindex="-1"
          ui5-link=""
        >
          Link 3
        </ui5-link>
      </li>
    </ol>
  </nav>
</DocumentFragment>
`;

exports[`Breadcrumbs separatorStyle: 'Slash' 1`] = `
<DocumentFragment>
  <nav
    aria-label="Breadcrumb Trail"
  >
    <ol
      class="Breadcrumbs-list"
    >
      <li
        id="0"
      >
        <ui5-link
          data-id="0"
          design="Default"
          tabindex="0"
          ui5-link=""
        >
          Link 1
        </ui5-link>
        <ui5-label
          aria-hidden="true"
          class="Breadcrumbs-separatorInline"
          ui5-label=""
        >
          /
        </ui5-label>
      </li>
      <li
        id="1"
      >
        <ui5-link
          data-id="1"
          design="Default"
          tabindex="-1"
          ui5-link=""
        >
          Link 2
        </ui5-link>
        <ui5-label
          aria-hidden="true"
          class="Breadcrumbs-separatorInline"
          ui5-label=""
        >
          /
        </ui5-label>
      </li>
      <li
        id="2"
      >
        <ui5-link
          data-id="2"
          design="Default"
          tabindex="-1"
          ui5-link=""
        >
          Link 3
        </ui5-link>
      </li>
    </ol>
  </nav>
</DocumentFragment>
`;

exports[`Breadcrumbs with currentLocationText 1`] = `
<DocumentFragment>
  <nav
    aria-label="Breadcrumb Trail"
  >
    <ol
      class="Breadcrumbs-list"
    >
      <li
        id="0"
      >
        <ui5-link
          data-id="0"
          design="Default"
          tabindex="0"
          ui5-link=""
        >
          Link 1
        </ui5-link>
        <ui5-label
          aria-hidden="true"
          class="Breadcrumbs-separatorInline"
          ui5-label=""
        >
          /
        </ui5-label>
      </li>
      <li
        id="1"
      >
        <ui5-link
          data-id="1"
          design="Default"
          tabindex="-1"
          ui5-link=""
        >
          Link 2
        </ui5-link>
        <ui5-label
          aria-hidden="true"
          class="Breadcrumbs-separatorInline"
          ui5-label=""
        >
          /
        </ui5-label>
      </li>
      <li
        id="2"
      >
        <ui5-link
          data-id="2"
          design="Default"
          tabindex="-1"
          ui5-link=""
        >
          Link 3
        </ui5-link>
        <ui5-label
          aria-hidden="true"
          class="Breadcrumbs-separatorInline"
          ui5-label=""
        >
          /
        </ui5-label>
      </li>
      <li
        id="3"
      >
        <div
          aria-current="page"
          class="Breadcrumbs-currentLocation"
          data-id="3"
          tabindex="-1"
        >
          Current Location
        </div>
      </li>
    </ol>
  </nav>
</DocumentFragment>
`;
